--- a/kOmegaSSTRC/ReadME
+++ b/kOmegaSSTRC/ReadME
@@ -1,4 +1,9 @@
 KOmegaSST Curvature Correction 
 
+ControlDict: 
+Add line: 
+    libs ("libkOmegaSSTRC.so")
+/////////
+Good to know: 
 Cr2=2.0  default value 
 It can be changed to check impact of separation 
